5-02-2025
- move some modules from /modules to /profiles
- add mcrcon program option
- add defaults to some special args for nixos modules (no longer required to use mkHost to consume)


5-01-2025
- add lxc templates and profile


4-27-2025
- add ryujinx switch emulator


4-26-2025
- add vinegar for roblox studio


4-25-2025
- fix conflicting hyprland option for stylix.


4-18-2025
- reorganized all program modules
- many custom program options are now shared between nixos and home-manager.
- added shared tmux profile.
- new mkProgramOption function: returns enable and package options for program
- patched up several old modules:
  - removed all references to /run/current-system/sw/bin or nixos specific paths from home-manager services
	- made heavier use of program.package options for modules and scripts instead of hardcoding the path from pkgs.
- removed other nixpkgs inputs and ensure that all inputs follow nixpkgs to mitigate the very prominant disk usage isssue with cloning nixpkgs by flakes.


4-09-2025
- yazi will now use evince by default when opening .pdf files
- removed kde target from stylix


3-31-2025
- changed default wallpaper for omori theme
- added temperature module coloring for omori waybar theme


3-24-2025
- finally managed to install the mov-cli-youtube plugin


3-23-2025
- update flake
- redid swww module. Home manager finally added their own service.
Should still function as before
- removed polkit-gnome as home-manager added the module to the default
- added optional bios argument to makehost: Can take "legacy" or "UEFI" and sets the appropriate boot options.


3-10-2025
- added hacker-mode nixos profile
- created the "gman-pc" profile to sync preferences among all machines
- added thinkfan for twilight
- temperature module for twilight
- added nix-gaming input and improved pipewire delay
- Fixed the networkmanager icon not showing up on waybar


2-28-2025
- add neovim-custom option to both nixos and HM