@@ -1,6 +1,7 @@
 { lib, config, ... }@args:
 let
   desktop = if args ? desktop then args.desktop else null;
+  hasDesktop = desktop != null;
   inherit (lib) mkDefault;
 in
 {
@@ -8,7 +9,9 @@ in
   config = lib.mkIf config.modules.benchmarking.enable {
     programs = {
       phoronix.enable = mkDefault true;
-      kdiskmark.enable = mkDefault desktop != null;
+      sysbench.enable = mkDefault true;
+      kdiskmark.enable = mkDefault hasDesktop;
+      glmark2.enable = mkDefault hasDesktop;
     };
   };
 }
